Adding Women and Men
Women on the left and men on the right

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div id="nav-container"></div>
     <div id="timeline-container"></div>
 
+    <div id = "container">
+        <h2 class="left">Women</h2>
+        <h3 class="right">Men</h3>
+    </div>
+
     <script src="data.js"></script>
     <script src="navigation.js"></script>
     <script src="timeline.js"></script>
