--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="timeline-container"></div>
 
     <div id = "container">
-        <h2 class="left">Women</h2>
-        <h3 class="right">Men</h3>
+        <h2 class="left">Female</h2>
+        <h3 class="right">Male</h3>
     </div>
 
     <script src="data.js"></script>
