added text box interaction at end

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <h2 class="left">Female</h2>
     <h3 class="right">Male</h3>
     <div id="timeline-container"></div>
-
-
+    <div id="container">
+        <div id="user-input">
+            <input type="number" id="age-input" placeholder="Enter your age (0-100)">
+            <select id="gender-input">
+                <option value="f">Female</option>
+                <option value="m">Male</option>
+            </select>
+            <button id="search-button">Search</button>
+        </div>
+        <div id="result"></div>
+    </div>
     <script src="data.js"></script>
     <script src="navigation.js"></script>
     <script src="timeline.js"></script>
