--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="nav-container"></div>
+    <div id="intro-container"></div>
     <h2 class="left">Female</h2>
     <h3 class="right">Male</h3>
     <div id="timeline-container"></div>
