added heading for text box and added constant to bar length

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="timeline-container"></div>
     <div id="container">
         <div id="user-input">
+            <h3>Find Out What Surgeries Are Most Common for You</h3>
             <input type="number" id="age-input" placeholder="Enter your age (0-94)">
             <select id="gender-input">
                 <option value="f">Female</option>
